# rs-names2stats2arrow-ipc-stream

./: Cargo.toml  README.md  build.sh  doc-web.sh  example.sh  names2stats2arrow-ipc-stream
src/: lib.rs
